sre-chaos-lab/monitoring/monitering-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: prom.myapp.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            # Match the exact name of your Prometheus service
            name: obs-kube-prometheus-stack-prometheus
            port:
              number: 9090
  - host: grafana.myapp.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: obs-grafana
            port:
              number: 80
